<resources>
    <string name="app_name">PocketEvents</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_city_search">CitySearchActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="profileAnimation">animateProfile</string>
    <string name="logoAnimation">animateLogo</string>

    <string name="PleaseWait">Please Wait</string>
    <string name="VolleyTimeout">Connection Timed Out</string>
    <string name="ValidPassword">Password should be alteast 4 Characters</string>
    <string name="ValidName">Name should be alteast two characters long</string>
    <string name="ValidEmail">Please enter a valid email-ID</string>
    <string name="ValidMobile">Enter a Valid Mobile</string>
    <string name="MatchPassword">Passwords do not Match</string>
    <string name="CheckCredentials">Checking Credentials</string>
    <string name="InvalidCredentials">Invalid Credentials</string>
    <string name="SomethingWentWrong">Something Went Wrong</string>
    <string name="Reset">Are you sure you want to reset all filters?</string>
    <string name="SaveFilter">Save Filter Selections?</string>
    <string name="GetVenues">Getting Venues.....</string>
    <string name="UpdateSuccessful">Update Successful </string>
    <string name="SaveExit">Save and Exit?</string>
    <string name="FiltersSaved">Filters Saved</string>
    <string name="NoImagesToDisplay">No Images to Display</string>
    <string name="SelectConsultingError">Please select consulting services</string>
    <string name="Submit">Submit</string>
    <string name="YourQueries">Your Query</string>
    <string name="FeedBack">Feedback</string>
    <string name="YourFeedBack">Provide your Feedback</string>
    <string name="RatingError">Please Provide a Rating</string>


    <string name="SelectPayment">Select Payment Method</string>
    <string name="cardName">Name on card</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardExpiry">Expiry Date</string>
    <string name="CardCVV">CVV</string>
    <string name="payment_title">Select Payment Method</string>
    <string name="payment_proceed_lable1">Organization</string>
    <string name="payment_proceed_lable2">Individual</string>
    <string name="payment_proceed_gst_number">Enter GST Number</string>
    <!--<string name="termsAndCondition">Left aligned running text for Terms and conditions for Pocket Events mobile app will come here. Running text for Terms and conditions for Pocket Events mobile app will come here.\n \n Left aligned running text for Terms and conditions for Pocket Events mobile app will come here. Running text for Terms and conditions for Pocket Events mobile app will come here. Running text for Terms andconditions for Pocket Events mobile app will come here. Running text for Terms and conditions for Pocket Events mobile app will come here.</string>-->
    <string name="termsAndCondition">
        THIS DOCUMENT IS AN ELECTRONIC RECORD IN TERMS OF INFORMATION TECHNOLOGY ACT, 2000 AND RULES THERE UNDER AS APPLICABLE AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC RECORDS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY AMENDMENT ACT, 2008. THIS ELECTRONIC RECORD IS GENERATED BY A COMPUTER SYSTEM AND DOES NOT REQUIRE ANY PHYSICAL OR DIGITAL SIGNATURES.

THIS DOCUMENT IS PUBLISHED IN ACCORDANCE WITH THE PROVISIONS OF RULE 3 (1) OF THE INFORMATION TECHNOLOGY (INTERMEDIARIES GUIDELINES) RULES, 2011 THAT REQUIRE PUBLISHING THE RULES AND REGULATIONS, TERMS OF SERVICES, PRIVACY POLICY AND USER AGREEMENT FOR ACCESS OR TERMS OF USAGE OF THEPRESENT APP OR ITS ALLIGED CONTENTS THEREOF.

YOUR USE OF THIS APP, SITE OR YOUR PROVISION TO USE OF ANY PERSONAL INFORMATION CONSTITUTES YOUR AGREEMENT TO THESE TERMS AND ANY SUBSEQUENT CHANGES TO THESE TERMS, WITHOUT NOTICE; DO NOT USE THE APP, SITE OR PROVIDE INFORMATION IF YOU DO NOT AGREE WITH ALL OF THE TERMS.

• PRIVACY NOTICE
We make every effort to preserve the user privacy, however we may need to disclose personal information when required by Law wherein we believe in good-faith belief that such action is necessary to comply with an appropriate Law, investigation, any judicial proceeding, a court order or legal process served on our APP, Web Site, or as required by Law.

• GENERAL DESCRIPTION
POCKETEVENTS collects a Person’s Name, Mailing Address, Phone Number and E-mail Address. This information is requested during the submission of a query by an agency from or to us and is used to deliver services that the user/agency/organization has requested.

• NORMAL BROWSING
As with many websites, we collect certain information. When you browse, read, or download information from POCKETEVENTS or Kestone.in ,data is collected by POCKETEVENTS including but not limited to your IP address, URL request, browser type, and date and time of your request. Additionally, we collect the IP addresses of visitors, time of access, browser type, and web pages visited. This is primarily done for a smooth transition of the user and to adhere to the security parameters of POCKETEVENTS itself.



• INFORMATION YOU PROVIDE
POCKETEVENTS does not request any personally identifiable information when you seek a query from the Contact Us link in POCKETEVENTS APP and is subject to the Terms of Use as mentioned on this App. (Such information may be used or requested to perform research, improve usability of the site, administer mailing lists or online communities or other activities related) to THE POCKETEVENTS services. This information may include, but is not limited to, person’s names, email addresses, location.

• DISCLOSURE OF INFORMATION
Available log records and all data stored on our servers may be accessed by our system administrators. In the event that we are required by Law (including a court order) to disclose the information you submit. We, however, prefer to independently object to overly broad requests for access to information about users of our THE POCKETEVENTS APP, but we cannot assure you that we will be able to do this in all cases. If you do not challenge the disclosure request yourself, we may be legally required to turn over your information. The challenge of such overly broad requests is inclusive but not limited to denial of information basis the judgment of the Hon'ble Supreme Court of India in the matter of Shreya Singhal v. Union of India; (2015) 5 SCC 1 or any other relevant judgment which may be applicable in the facts and circumstances of the matter.

• HOW IS THE INFORMATION USED
THE POCKETEVENTS App’s primary goal in collecting personal information is to provide you, the community member, with a potentially fulfilling experience of using the THEPOCKETEVENTS APP as meant to the best possible smooth and transitionally manner by its creator/agency/user.

• LOG FILES
Unlike most standard Websites and Apps we do use any log files. We do however track IP (Internet Protocol) addresses, browser type, ISP (internet service provider), referring / exit pages, platform type, date / time stamp and number of clicks to analyze trends, administer the site, track user's movement in the aggregate, and gather broad demographic information for aggregate use. IP addresses, etc. are not linked to personally identifiable information at any given time.

• COOKIES
As set forth above under “Normal Browsing” anonymous users may receive session cookies while visiting our website while their browser is open. “Users” are subject to the POCKETEVENTS and individual Terms of Service of other websites.

• TELL A FRIEND
If a user elects to use our referral service for informing a friend about POCKETEVENTS App; we ask them for the friend's name and email address. POCKETEVENTS will automatically send the friend a one-time email inviting them to visit THE KEY SOLUTION. Name of the Site stores this information for the sole purpose of sending this one-time email. The friend may be contacted by POCKETEVENTS App to request the removal of this information from our database.

• CHILDREN'S PRIVACY
POCKEEVENT APPs content is intended for adults and we will not knowingly collect personal information from children and minors under 18 years of age. If you are a parent or legal guardian of a child under age 18 who you believe has submitted personal information to POCKETEVENTS, please contact us immediately.

• SECURITY
POCKETEVENTS has security measures in place to protect the loss, misuse and alteration of the information under our control. However, your confidential use of POCKETEVENTS cannot be guaranteed by POCKETEVENTS APP. POCKETEVENTS shall not be responsible for any harm that you or any person may suffer as a result of a breach of confidentiality in respect to your use of POCKETEVENTS App.

• NOTIFICATION OF CHANGES
If we are going to use your personally identifiable information in POCKETEVENTS APP, any manner different from that stated at the time of collection, we will notify you via email. You will have a choice as to whether or not we use your information in this different manner. However, if you have opted out of all communication with the site, or deleted/deactivated your account, then you will not be contacted. Nor will your personal information be used in this new manner. In addition, if we make any material changes in our privacy practices that do not affect user information already stored in our database, we will post a prominent notice on our web site notifying users of the change. In some cases, where we post a notice we will also email users, who have opted to receive communications from us, notifying them of the changes in our privacy practices. We will use information in accordance with the privacy policy under which the information was collected.

• CONSULTING SERVICES
Pocket Events Consulting Services: -
Scope and Inclusions:
Venue
•	PocketEvents will search the venues as per the criteria given by you and will give you status of 5 hotels availability that fit in the search criteria
•	We’ll tentatively block the venue, if any available in your name and will forward you the details and you can then take the negotiations forward as per your choice
•	We’ll cover this exercise once as per instance of consulting services availed
Setup
•	We’ll understand the requirements in depth and will suggest the setup accordingly. We’ll also suggest the way forward and will give you 1 basic design of backdrop inclusive in this service
•	There will be 1 final design only included in this and further iterations are on chargeable basis
Design
•	For chosen consulting service, we’ll give you artworks of a Theme pack which you can choose out of 5 reference packs. The reference theme pack would be for reference and art work will be provided for only the chosen theme. Further customization can be done on chargeable basis
More
•	We will understand the requirements and the space available along with the profile of the attendees and will suggest the artist / activities / giveawaysaccordingly. We’ll also make suggestions for a few giveaways and from where you can source the same. We’ll share some reference images / videos of our recommendations. Further booking of the artist / giveaways etc. can be done on further chargeable basis
All consulting services are provided over email / phone calls and are valid till end of project / service cycle selected OR 3 days whichever comes earlier.

POCKETEVENTS OR KESTONE IS NOT ENGAGED IN THE OCCUPATION OF STORING, PROCURING OR USE OF THE INFORMATION (USER NAMES, PASSWORDS OR EMAILS) THAT YOU MAY ACCESS BY THE USE OF YOUR SOCIAL NETWORKING ACCOUNT FOR THE PURPOSES OF LIKE, TWEETING, +1 BUTTON, OR MENTIONS AND SUBSEQUTENLY CANT BE HELD LIABLE FOR THE SAME.

    </string>

</resources>