<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp"
    android:gravity="center"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true">
    <TextView
        fontPath="fonts/medium.ttf"
        tools:ignore="MissingPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/Size10"
        android:gravity="center"
        android:textColor="@color/textColorRed"
        android:layout_marginBottom="@dimen/_10sdp" />

    <TextView
        android:textColor="@color/textColorBlack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:textSize="@dimen/Size12"
        android:text="@string/payment_title" />



    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_individual"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_proceed_lable2"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_proceed_lable1"
            android:layout_marginRight="@dimen/_10sdp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <EditText
        android:visibility="gone"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/payment_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_proceed_gst_number"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/Size10"
        android:gravity="center"
        android:backgroundTint="@color/colorRedDark"
        android:lines="1" />

    <TextView
        android:gravity="center"
        android:textSize="@dimen/Size9"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_width="@dimen/Dialog_Button_Width"
        android:layout_height="@dimen/Dialog_Button_Height"
        android:background="@drawable/btn_design_solid"
        android:text="@string/Submit"
        android:id="@+id/submit"
        android:textColor="@color/textColorWhite"
        />







</LinearLayout>