<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/venueFilterRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/venue_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                fontPath="fonts/medium.ttf"
                tools:ignore="MissingPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="Consulting Services"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/Size12"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/venue_filter_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SelectPayment"
                android:textSize="@dimen/Size10" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.2"
            android:scrollbars="none"
            android:background="@color/bg_grey"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:background="@color/textColorWhite"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Size11"
                    android:textColor="@color/textColorBlack"
                    android:text="Credit Card"
                    android:layout_marginBottom="@dimen/_10sdp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_grey"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardName"
                        android:id="@+id/cdName"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardNumber"
                        android:id="@+id/cdNumber"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardExpiry"
                        android:id="@+id/cdExpiry"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/CardCVV"
                        android:id="@+id/cdCVV"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Size11"
                    android:textColor="@color/textColorBlack"
                    android:text="Debit Card"
                    android:layout_marginBottom="@dimen/_10sdp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_grey"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardName"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardNumber"
                        android:id="@+id/dbNumber"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardExpiry"
                        android:id="@+id/dbExpiry"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/CardCVV"
                        android:id="@+id/dbCVV"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>

                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Size11"
                    android:textColor="@color/textColorBlack"
                    android:text="Net Banking"
                    android:layout_marginBottom="@dimen/_10sdp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_grey"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardName"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardNumber"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardExpiry"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/CardCVV"
                        android:textSize="@dimen/Size11"
                        android:backgroundTint="@android:color/transparent"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/bg_grey"/>

                </LinearLayout>




            </LinearLayout>



        </ScrollView>


    </LinearLayout>
</LinearLayout>
